--- a/docs-theme/mixins/property-name.pug
+++ b/docs-theme/mixins/property-name.pug
@@ -1,4 +1,4 @@
-mixin param-property-name(property)
+mixin property-name(property)
   span.code.bold= property.name
   = " "
   code!= format.type(property.type)
