--- a/docs-theme/mixins/property-row.pug
+++ b/docs-theme/mixins/property-row.pug
@@ -1,22 +1,21 @@
-mixin param-property-row(property)
-  tr
+mixin property-row(property, depth)
+  tr(class=(depth >= 1 && "indent"))
     td.break-word
       span.code.bold= property.name
       = " "
-
-    td.break-word
+      br
       code!= format.type(property.type)
-
 
     td.break-word
       span!= format.md(property.description, true)
 
       if property.default
-        strong
+        br
+        em
           | The default value is 
-          code= property.default
+          code.roman= property.default
           = ". "
 
   if property.properties && property.properties.length
     each child in property.properties
-      +param-property-row(child)
+      +property-row(child, (depth || 0) + 1)
