--- a/docs-theme/mixins/signature.pug
+++ b/docs-theme/mixins/signature.pug
@@ -1,13 +1,14 @@
 mixin signature(section, includeReturns)
-  if section.kind === "class"
-    = "new "
+  strong
+    if section.kind === "class"
+      = "new "
 
-  = section.name
+    = section.name
 
   if format.isFunction(section)
     if section.returns.length
       != format.parameters(section)
 
-    if includeReturns
+    if includeReturns && section.returns.length
       = ": "
       != format.type(section.returns[0].type)
