--- a/assets/style.css
+++ b/assets/style.css
@@ -1,34 +1,105 @@
+* {
+  border: 0 solid #c3ccdc;
+}
+
+html,
+body {
+  scroll-padding-top: 5em;
+}
+
+header {
+  color: #b5bde0;
+  background: #1c2335 url("./gradient.png") no-repeat;
+  background-size: 100% 4px;
+}
+
+header h1 {
+  font-weight: normal;
+}
+
+header h1 code {
+  color: white;
+}
+
+header a {
+  color: inherit;
+}
+
+header .install {
+  padding: 0.5em 0.8em;
+  background-color: #fff3;
+  border-radius: 3px;
+  display: inline-block;
+}
+
+header h1::before {
+  content: ">";
+  margin-right: 0.3em;
+  opacity: 0.5;
+}
+
+#toc {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  height: 4em;
+}
+
+#toc > div {
+  background-color: white;
+  background-clip: padding-box;
+  border-bottom: 1px solid #001d683b;
+}
+
 .documentation {
   font-family: system-ui, Helvetica, sans-serif;
   color: #1c2335;
   line-height: 1.5;
 }
 
-header {
-  background: #f3f5f7;
+.example-code {
+  display: flex;
+  flex-direction: column;
+}
+
+.example-code > :last-child {
+  flex-grow: 1;
 }
 
 .example-result {
   max-width: 100%;
   margin-bottom: -1px;
+  flex-shrink: 0;
 }
 
 @media (min-width: 40em) {
+  header h1 code::before {
+    content: "npm install ";
+    color: #b5bde0;
+    opacity: 0.75;
+  }
+
   .example-result {
     margin-right: -1px;
     margin-bottom: 0;
+  }
+
+  .example-result iframe {
+    width: 360px;
   }
 }
 
 .example-result iframe {
   border: 1px solid #d8dde7;
-  min-width: 400px;
+  max-width: 100%;
   box-sizing: border-box;
   height: auto;
+  min-height: 250px;
   resize: both;
 }
 
 .example-result iframe:not([style]) {
+  height: 250px;
   min-height: 100%;
 }
 
@@ -49,6 +120,10 @@ a {
   text-decoration: underline;
 }
 
+hr {
+  border-width: 0 0 1px 0;
+}
+
 a:hover {
   cursor: pointer;
 }
@@ -57,21 +132,14 @@ a:hover {
   padding: 5px 0;
 }
 
-.max-height-100 {
-  max-height: 100%;
-}
-
-.height-viewport-100 {
-  height: 100vh;
-}
-
-section:target h3 {
-  font-weight: 700;
-}
-
 .documentation td,
 .documentation th {
   padding: 0.25rem 0.25rem;
+}
+
+.documentation tr.indent > td:first-child {
+  background: linear-gradient(to right, lightsteelblue 3px, transparent 3px);
+  padding-left: 1em;
 }
 
 h1:hover .anchorjs-link,
@@ -102,11 +170,15 @@ pre,
 code,
 .code {
   font-family: ui-monospace, Menlo, monospace;
-  font-size: 14px;
+  font-size: 87.5%;
+}
+
+p code {
+  font-size: 93.75%;
 }
 
 .fill-light {
-  background: #f9f9f9;
+  background: ghostwhite;
 }
 
 .width2 {
@@ -128,13 +200,14 @@ code,
 
 table {
   border-collapse: collapse;
+  line-height: 1.25;
 }
 
 .prose table th,
 .prose table td {
   text-align: left;
   padding: 8px;
-  border: 1px solid #ddd;
+  border-width: 1px;
 }
 
 .prose table th:nth-child(1) {
@@ -145,7 +218,7 @@ table {
 }
 
 .prose table {
-  border: 1px solid #ddd;
+  border-width: 1px;
 }
 
 .prose-big {
