--- a/docs-theme/iframe.pug
+++ b/docs-theme/iframe.pug
@@ -4,7 +4,7 @@ html
     content="width=device-width, initial-scale=1"
   )
 
-  link(rel="stylesheet" href="../assets/shown.css")
+  link(rel="stylesheet" href="../../assets/shown.css")
 
   style.
     * {
