--- a/docs-theme/index.pug
+++ b/docs-theme/index.pug
@@ -16,9 +16,9 @@ html
     if config["project-description"]
       meta(name="description" content=config["project-description"])
     
-    link(rel="stylesheet" href="assets/bass.css")
-    link(rel="stylesheet" href="assets/style.css")
-    link(rel="stylesheet" href="assets/code.css")
+    link(rel="stylesheet" href="assets/css/bass.css")
+    link(rel="stylesheet" href="assets/css/style.css")
+    link(rel="stylesheet" href="assets/css/code.css")
 
     if (config["favicon"])
       link(rel="icon" href=config["favicon"])
@@ -44,5 +44,5 @@ html
 
     include partials/footer
 
-  script(src="assets/anchor.js")
-  script(src="assets/site.js")
+  script(src="assets/js/anchor.js")
+  script(src="assets/js/site.js")
