--- a/docs-theme/index.pug
+++ b/docs-theme/index.pug
@@ -19,9 +19,8 @@ html
     link(rel="stylesheet" href="assets/css/bass.css")
     link(rel="stylesheet" href="assets/css/style.css")
     link(rel="stylesheet" href="assets/css/code.css")
-
-    if (config["favicon"])
-      link(rel="icon" href=config["favicon"])
+    
+    link(rel="icon" href="assets/favicon.png")
   
     meta(
       name="viewport"
