--- a/docs-theme/assets/css/code.css
+++ b/docs-theme/assets/css/code.css
@@ -63,6 +63,10 @@
   font-weight: bold;
 }
 
+.hljs-literal {
+  color: #f93;
+}
+
 .hljs-tag,
 .hljs-tag .hljs-title,
 .django .hljs-tag .hljs-keyword {
