--- a/src/css/shown.css
+++ b/src/css/shown.css
@@ -22,8 +22,23 @@
 }
 
 .shown .chart-pie {
-  aspect-ratio: 1/1;
-  max-height: 100%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.shown .chart-pie-wrap {
+  width: 100%;
+  max-width: calc(100vh - 2em);
+}
+
+.shown .chart-pie-svg {
+  width: auto;
+  height: 100%;
+  display: block;
   margin: auto;
 }
 
