--- a/src/css/shown.css
+++ b/src/css/shown.css
@@ -53,12 +53,14 @@
 .shown .legend {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 1em;
-  margin-top: 0.5em;
+  margin: 1em auto 0;
+  padding: 0;
 }
 
 .shown .legend-marker {
-  width: 1.5em;
+  width: 1.25em;
   height: 0.75em;
   margin-right: 0.5em;
 }
