--- a/assets/css/shown.css
+++ b/assets/css/shown.css
@@ -22,8 +22,23 @@
 }
 
 .shown .chart-pie {
-  aspect-ratio: 1/1;
-  max-height: 100%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.shown .chart-pie-wrap {
+  width: 100%;
+  max-width: calc(100vh - 2em);
+}
+
+.shown .chart-pie-svg {
+  width: auto;
+  height: 100%;
+  display: block;
   margin: auto;
 }
 
@@ -38,12 +53,14 @@
 .shown .legend {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 1em;
-  margin-top: 0.5em;
+  margin: 1em auto 0;
+  padding: 0;
 }
 
 .shown .legend-marker {
-  width: 1.5em;
+  width: 1.25em;
   height: 0.75em;
   margin-right: 0.5em;
 }
