Docs: Copy src files to output for use later on

--- a/docs-theme/iframe.pug
+++ b/docs-theme/iframe.pug
@@ -6,7 +6,7 @@ html
     content="width=device-width, initial-scale=1"
   )
 
-  link(rel="stylesheet" href="../../assets/css/shown.css")
+  link(rel="stylesheet" href="../../shown/css/shown.css")
 
   style.
     * {
