--- a/docs-theme/public/assets/css/style.css
+++ b/docs-theme/public/assets/css/style.css
@@ -96,6 +96,7 @@ header h1::before {
   height: auto;
   min-height: 250px;
   resize: both;
+  display: block;
 }
 
 .example-result iframe:not([style]) {
