--- a/docs-theme/partials/intro.pug
+++ b/docs-theme/partials/intro.pug
@@ -12,7 +12,7 @@
     JavaScript-free templates reduce bundle sizes and improve performance by avoiding the need to do expensive recalculations when a container resizes.
 
   p.
-    The library offers a high-level API to generate charts, providing good results with minimal configuration. When more flexibility is required, an expressive data mapping syntax allows for fine-grained control.
+    The library offers a high-level API to generate charts, providing good results with minimal configuration. When more flexibility is required, expressive data mapping allows for fine-grained control.
 
   p
     code shown
