Update: Match text colour in example charts

--- a/docs-theme/iframe.pug
+++ b/docs-theme/iframe.pug
@@ -22,6 +22,7 @@ html
       padding: 1em;
       box-sizing: border-box;
       font-family: system-ui, Helvetica, sans-serif;
+      color: #1c2335;
     }
 
     /* Firefox doesn't constrain the element */
