deploy: a3e791bd5db5363a66a4901c39dfe7e97bfe8fcd

--- a/shown/css/shown.css
+++ b/shown/css/shown.css
@@ -1,14 +1,14 @@
 .shown svg,
-.symbol {
+.shown .symbol {
   overflow: visible;
 }
 
-.shown text {
+.shown svg {
   fill: currentColor;
 }
 
 .shown .axis {
-  color: #333;
+  fill-opacity: 0.9;
   user-select: none;
 }
 .shown .axis,
