--- a/docs-theme/partials/intro.pug
+++ b/docs-theme/partials/intro.pug
@@ -3,10 +3,10 @@
 
   p
     code shown
-    |  generates simple HTML and SVG charts. Use the library with static-site generators (SSG), or in server-side rendering (SSR) contexts to create self-contained, embeddable chart documents. The library fills the gap between unresponsive images and complex data visualization tools.
+    |  generates simple HTML and SVG charts. The library works with static-site generators (SSG), or in server-side rendering (SSR) contexts to create self-contained, embeddable chart documents. It aims to fill a gap between unresponsive images and complex data visualization tools.
 
   p.
-    The library offers a high-level API to generate charts, providing good results with minimal configuration. When more flexibility is required, expressive data mapping allows for fine-grained control.
+    The library offers a high-level API to generate charts, providing good results with minimal configuration. When more flexibility is required, expressive data mapping allows for fine-grained control. Plug and play data from different sources, mapping values as you need them.
 
   p.
     Charts adapt to different screen-sizes without any need for client-side JavaScript. Charts will expand and contract to fill their containers without affecting font size, so text remains legible across viewports.
