Update: Improve docs and tests

--- a/docs-theme/mixins/property-name.pug
+++ b/docs-theme/mixins/property-name.pug
@@ -1,7 +1,8 @@
 mixin property-name(property)
-  span.code.bold= property.name
-  = " "
-  code!= format.type(property.type)
+  span.code
+    span.bold= property.name
+    = " "
+    != format.type(property.type)
 
-  if property.default
-    |  (default <code>#{property.default}</code>)
+    if property.default
+      |  (default <code>#{property.default}</code>)
