Docs: Fix mobile horizontal scrolling

--- a/docs-theme/partials/nav.pug
+++ b/docs-theme/partials/nav.pug
@@ -1,9 +1,9 @@
-nav#toc.px2
-  .max-width-4.mx-auto.py2
-    ul.list-reset.h5.py1-ul.flex.m0
+nav#toc
+  .scroll.max-width-4.mx-auto.py2
+    ul.list-reset.h5.py1-ul.flex.m0.px2
       each doc in docs
         - const hasMembers = doc.members.static.length || doc.members.instance.length
-        li.mr2
+        li
           a(
             href=`#${format.slug(doc.namespace)}`
             class=[
