--- a/docs-theme/public/assets/css/style.css
+++ b/docs-theme/public/assets/css/style.css
@@ -133,12 +133,8 @@ header h1::before {
   min-height: 100%;
 }
 
-.documentation h3 {
-  color: #000;
-}
-
-.border-bottom {
-  border-color: #ddd;
+#legend-examples + * .example-result iframe:not([style]) {
+  height: 3.5rem;
 }
 
 a {
@@ -211,23 +207,6 @@ p code {
   background: ghostwhite;
 }
 
-.width2 {
-  width: 1rem;
-}
-
-.input {
-  font-family: inherit;
-  display: block;
-  width: 100%;
-  height: 2rem;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border: 1px solid #ccc;
-  font-size: 0.875rem;
-  border-radius: 3px;
-  box-sizing: border-box;
-}
-
 table {
   border-collapse: collapse;
   line-height: 1.25;
@@ -254,10 +233,6 @@ table {
 .prose-big {
   font-size: 18px;
   line-height: 30px;
-}
-
-.quiet {
-  opacity: 0.7;
 }
 
 pre.html {
