--- a/shown/css/shown.css
+++ b/shown/css/shown.css
@@ -3,7 +3,8 @@
   overflow: visible;
 }
 
-.shown svg {
+.shown svg,
+.shown text {
   fill: currentColor;
 }
 
@@ -106,8 +107,12 @@
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
-  margin: 0.75em auto 0;
+  margin: 0 auto;
   padding: 0;
+}
+
+.shown .legend:not(:first-child) {
+  margin-top: 1em;
 }
 
 .shown .legend-marker {
