--- a/docs-theme/index.pug
+++ b/docs-theme/index.pug
@@ -17,12 +17,10 @@ html
 
     if config["project-description"]
       meta(name="description" content=config["project-description"])
-    
-    - const timestamp = Date.now().toString(32)
 
-    link(rel="stylesheet" href=`assets/css/bass.css?${timestamp}`)
-    link(rel="stylesheet" href=`assets/css/style.css?${timestamp}`)
-    link(rel="stylesheet" href=`assets/css/code.css?${timestamp}`)
+    link(rel="stylesheet" href=`assets/css/bass.css?${cachebust}`)
+    link(rel="stylesheet" href=`assets/css/style.css?${cachebust}`)
+    link(rel="stylesheet" href=`assets/css/code.css?${cachebust}`)
     
     link(rel="icon" href="assets/favicon.png")
   
