Docs: Improve navigation margins

--- a/docs-theme/partials/nav.pug
+++ b/docs-theme/partials/nav.pug
@@ -1,9 +1,9 @@
 nav#toc
-  .scroll.max-width-4.mx-auto.py2
-    ul.list-reset.h5.py1-ul.flex.m0.px2
+  .scroll.max-width-4.mx-auto.p2
+    ul.list-reset.h5.py1-ul.flex.m0
       each doc in docs
         - const hasMembers = doc.members.static.length || doc.members.instance.length
-        li
+        li.m0.mr2
           a(
             href=`#${format.slug(doc.namespace)}`
             class=[
