--- a/src/css/shown.css
+++ b/src/css/shown.css
@@ -143,3 +143,9 @@
 .shown .symbol * {
   vector-effect: non-scaling-stroke;
 }
+
+.shown#symbol-cross {
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 2;
+}
