--- a/shown/css/shown.css
+++ b/shown/css/shown.css
@@ -1,5 +1,6 @@
 .shown svg,
-.shown .symbol {
+.shown .symbol,
+.shown.symbol {
   overflow: visible;
 }
 
@@ -134,11 +135,23 @@
   font-size: 10px;
 }
 
-.shown .symbol .touch {
+.shown .touch {
   fill: transparent !important;
   stroke: none !important;
 }
 
 .shown .symbol * {
   vector-effect: non-scaling-stroke;
+}
+
+.shown#symbol-asterisk,
+.shown#symbol-cross {
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 2;
+}
+
+.shown#symbol-asterisk circle {
+  fill: white;
+  stroke: none;
 }
