--- a/shown/css/shown.css
+++ b/shown/css/shown.css
@@ -17,6 +17,7 @@
   fill-opacity: 0.9;
   user-select: none;
 }
+
 .shown .axis,
 .shown .series-label {
   font-size: 85%;
@@ -59,6 +60,20 @@
 
 .shown .chart-bar > div {
   padding-bottom: 0.5em;
+}
+
+.shown .chart-area .series,
+.shown .chart-line .series {
+  stroke-linecap: round;
+}
+
+.shown .areas,
+.shown .lines {
+  overflow: hidden;
+}
+
+.shown .areas {
+  opacity: 0.9;
 }
 
 .shown .has-xaxis > div,
